--- a/css/pagesstyle-pad.css
+++ b/css/pagesstyle-pad.css
@@ -3,7 +3,7 @@
 	width:50px;
 	height:50px;
 	margin:0 3px;
-	font-size:15px;
+	font-size:18px;
 	line-height:50px;
 }
 #header .search{
@@ -56,11 +56,12 @@
 	margin-top:20px;
 	width:90%;
 	height:230px;
+	font-size:16px;
 	/*background:red;*/
 }
 #about .int h3{
-	padding:0 0 3px 0;
-	font-size:16px;
+	padding:0 0 10px 0;
+	font-size:18px;
 }
 #about .int p{
 	color:#333;
@@ -69,7 +70,7 @@
 #about img{
 	float:right;
 	margin-right:15%;
-	margin-top:0;
+	margin-top:20px;
 }
 #edu{
 	float:left;
@@ -96,13 +97,13 @@
 }
 #about .fig h4{
 	display:block;
-	margin:10px 5px 0 0;
+	margin:10px 5px 8px 0;
 	font-size:18px;
 }
 #about .fig p{
 	display:block;
 	padding-bottom:5px;
-	font-size:14px;
+	font-size:16px;
 }
 #sklls .sk-li p{
 	padding-bottom:10px;
@@ -115,7 +116,7 @@
 	margin-bottom:40px;
 }
 #contact .name{
-	margin-left:15%;
+	margin-left:25%;
 	font-size:18px;
 	line-height:30px;
 }
@@ -125,7 +126,8 @@
 }
 
 #contact .code{
-	margin-right:15%;
+	margin-right:35%;
+	margin-top:0;
 }
 #fooder{
 	height:40px;
