--- a/css/pagesstyle-phone.css
+++ b/css/pagesstyle-phone.css
@@ -14,6 +14,9 @@
 	line-height:50px;
 	background:rgba(240,240,240,0.5);
 }
+#logo a h1{
+	font-size:35px;
+}
 #header .search{
 	display:none;
 }
@@ -39,7 +42,6 @@
 #banner .tit h1{
 	font-size:35px;
 	padding:0 0 4px 0;
-	
 }
 #banner .tit p{
 	font-size:20px;
