--- a/css/pagesstyle-phone.css
+++ b/css/pagesstyle-phone.css
@@ -18,15 +18,11 @@
 	font-size:35px;
 }
 #header .search{
-	display:none;
+	width:85px;
 }
 #search-btn{
-	display:none;
+	right:7%;
 }
-#nav-phone{
-	display:block;
-}
-
 #banner{
 	height:400px;
 }
@@ -47,9 +43,10 @@
 	font-size:20px;
 	padding:4px 0;
 }
-#banner .tit input{
+#banner .tit a{
 	width:180px;
 	height:36px;
+	line-height:36px;
 	font-size:12px;
 	margin:2px 0;
 }
@@ -74,7 +71,7 @@
 	margin-top:0;
 	font-size:14px;
 	width:90%;
-	height:450px;
+	height:560px;
 }
 #about .int h3{
 	padding:0 0 1px 0;
@@ -140,6 +137,13 @@
 #project img{
 	width:280px;
 }
+#project a{
+	font-size:14px;
+}
+#project a p{
+	margin-top:5px;
+	margin-bottom:10px;
+} 
 #contact{
 	margin-bottom:20px;
 }
@@ -152,10 +156,11 @@
 }
 #contact .name h2{
 	font-size:20px;
-	padding-bottom:12px;
+	padding-bottom:8px;
 }
 
 #contact .code{
+	display:inline-block;
 	margin-right:22%;
 	margin-top:0;
 }
