--- a/css/pagesstyle-pad.css
+++ b/css/pagesstyle-pad.css
@@ -10,9 +10,10 @@
 	font-size:40px;
 }
 #header .search{
-	
-	right:3%;
-	width:180px;
+	width:90px;
+}
+#search-btn{
+	right:7%;
 }
 #banner{
 	height:500px;
@@ -32,9 +33,10 @@
 	font-size:22px;
 	padding:6px 0;
 }
-#banner .tit input{
+#banner .tit a{
 	width:200px;
 	height:40px;
+	line-height:40px;
 	font-size:14px;
 	margin:3px 0;
 }
@@ -58,7 +60,7 @@
 	margin-right:5%;
 	margin-top:20px;
 	width:90%;
-	height:230px;
+	height:300px;
 	font-size:16px;
 }
 #about .int h3{
@@ -105,7 +107,7 @@
 #about .fig p{
 	display:block;
 	padding-bottom:5px;
-	font-size:16px;
+	font-size:14px;
 }
 #sklls .sk-li p{
 	padding-bottom:10px;
@@ -114,11 +116,18 @@
 #project img{
 	width:480px;
 }
+#project a{
+	font-size:14px;
+}
+#project a p{
+	margin-top:5px;
+	margin-bottom:10px;
+} 
 #contact{
 	margin-bottom:40px;
 }
 #contact .name{
-	margin-left:25%;
+	/*margin-left:25%;*/
 	font-size:18px;
 	line-height:30px;
 }
@@ -128,7 +137,7 @@
 }
 
 #contact .code{
-	margin-right:35%;
+	/*margin-right:35%;*/
 	margin-top:0;
 }
 #fooder{
