--- a/css/pagesstyle.css
+++ b/css/pagesstyle.css
@@ -3,12 +3,41 @@
 	margin:0;
 	padding:0;
 }
-body{
+html,body{
 	max-width:1920px;
 	font: 14px Arial,"微软雅黑","MicrosoftJhengHei",华文细黑,STHeiti,MingLiu;
+	scrollbar-base-color:#2c58ed;
+	scrollbar-3dlight-color:#2c58ed; 
+	scrollbar-highlight-color:#2c58ed; 
+	scrollbar-track-color:#F5F5F5;
+	scrollbar-arrow-color:black; 
+	scrollbar-shadow-color:#2c58ed;
+	scrollbar-dark-shadow-color:#2c58ed;
 }
+/*定义滚动条高宽及背景 高宽分别对应横竖滚动条的尺寸*/  
+::-webkit-scrollbar  
+{  
+    width:8px;  
+    height:8px;  
+    background-color:#F5F5F5;  
+}  
+ /*定义滚动条轨道 内阴影+圆角*/  
+::-webkit-scrollbar-track  
+{  
+    -webkit-box-shadow:inset 0 0 4px rgba(0,0,0,0.3);  
+    background-color:#F5F5F5;  
+}  
+ /*定义滑块 内阴影+圆角*/  
+::-webkit-scrollbar-thumb  
+{  
+    -webkit-box-shadow:inset 0 0 4px rgba(0,0,0,.3);  
+    background-color:#2c58ed;  
+} 
 ul li{
 	list-style-type:none;
+}
+a{
+	text-decoration:none;
 }
 #header{
 	width:100%;
@@ -28,16 +57,13 @@ ul li{
 	line-height:70px;
 	text-align:center;
 }
-#logo a{
-	text-decoration:none;
-}
 #logo a h1{
 	font-family:'Comic Sans MS','Arial';
 	font-size:45px;
 }
 #header ul{
 	position:absolute;
-	left:35%;
+	right:20%;
 	top:10px;
 }
 #header ul li{
@@ -48,10 +74,9 @@ ul li{
 	font-size:20px;
 	text-align:center;
 	line-height:50px;
-	border-bottom:1px solid #ccc;
 	cursor:pointer;
 }
-#header ul li:hover{
+#header ul a:hover{
 	color:red;
 }
 #header .search{
@@ -60,7 +85,7 @@ ul li{
 	top:25px;
 	height:30px;
 	line-height:30px;
-	width:200px;
+	width:120px;
 	border:none;
 	color:#999;
 	background:#fff;
@@ -73,22 +98,6 @@ ul li{
 	position:absolute;
 	right:5%;
 	top:28px;
-
-}
-#nav-phone{
-	display:none;
-	float:right;
-	width:45px;
-	height:35px;
-	border:2px solid #ccc;
-	border-radius:4px;
-	text-align:center;
-	margin-right:10%;
-	margin-top:15px; 
-}
-#nav-phone img{
-	margin-top:2px; 
-	height:30px;
 }
 #banner{
 	width:100%;
@@ -114,15 +123,24 @@ ul li{
 	font-size:24px;
 	padding:8px 0;
 }
-#banner .tit input{
+#banner .tit a{
+	display:inline-block;
 	width:210px;
 	height:45px;
+	line-height:45px;
+	text-align:center;
 	font-size:16px;
 	color:#999;
 	margin:5px 0;
 	background:#fff;
-	border:none;
-	cursor:pointer;
+	transition:all 0.5s ease-out;
+	-moz-transition:all 0.5s ease-out;
+	-webkit-transition:all 0.5s ease-out;
+	-o-transition:all 0.5s ease-out;
+}
+#banner .tit a:hover{
+	color:#fff;
+	background:#999;
 }
 #banner img{
 	width:500px;
@@ -154,7 +172,7 @@ ul li{
 	float:left;
 	margin-left:5%;
 	margin-top:70px;
-	font-size:18px;
+	font-size:14px;
 	color:#999;
 	width:35%;
 	height:400px;
@@ -235,12 +253,14 @@ ul li{
 #about .fig p{
 	display:block;
 	padding-bottom:5px;
-	font-size:18px;
+	font-size:14px;
+	line-height:20px;
 	color:#999;
 }
 
 #sklls{
-	width:100%；
+	width:100%;
+	float:left;
 	margin-top:70px;
 } 
 #sklls .sklls-list{
@@ -299,10 +319,22 @@ ul li{
 }
 #project a{
 	border:none;
+	font-size:16px;
+	color:#333;
+	margin-bottom
 }
+#project a:hover{
+	color:#f7671d;
+	text-decoration:underline;
+}
+max-width:360px;
+#project a p{
+	margin-top:10px;
+	margin-bottom:20px;
+} 
 #project img{
 	border:none;
-	width:375px;
+	width:335px;
 }
 #contact{
 	float:left;
@@ -315,7 +347,7 @@ ul li{
 	width:400px;
 	height:300px;
 	float:left;
-	margin-left:15%;
+	margin-left:20%;
 	font-size:20px;
 	color:#666;
 	line-height:33px;
@@ -325,27 +357,22 @@ ul li{
 	padding-bottom:15px;
 	color:#333;
 }
-#contact ul li{
-	display:inline-block;
-	width:30px;
-	height:30px;
-	margin-left:8px;
-	margin-top:10px;
-	text-align:center;
-	background:#2c58ed;
-	border-radius:50%;
-
-}
-#contact ul img{
-	width:30px;
+#contact .name a:hover{
+	text-decoration:underline;
 }
 #contact .code{
 	float:right;
-	margin-right:25%;
+	margin-right:20%;
 	margin-top:50px;
 	width:200px;
 }
-
+#gotop{
+	position:fixed;
+	right:30px;
+	bottom:20px;
+	cursor:pointer;
+	display:none; 
+}
 #fooder{
 	float:left;
 	width:100%;
