--- a/css/pagesstyle-phone.css
+++ b/css/pagesstyle-phone.css
@@ -98,13 +98,16 @@
 	margin-left:5%;
 	margin-top:15px;
 }
+
 #about .fig h3{
+	padding-top:30px;
 	padding-bottom:2px;
 	font-size:20px;
 }
 #about .mod{
-	margin:15px 0;
+	margin:20px 0 80px 0;
 }
+
 #about .fig h2{
 	font-size:25px;
 	width:80px;
@@ -112,6 +115,7 @@
 	line-height:120px;
 }
 #about .fig span{
+	top:-10px;
 	left:85px;
 }
 #about .fig h4{
@@ -124,6 +128,9 @@
 	font-size:14px;
 	line-height:22px;
 }
+#sklls{
+	margin-top:0;
+}
 #sklls .sk-li p{
 	padding-bottom:0;
 	font-size:16px;
@@ -132,7 +139,7 @@
 	margin-top:0;
 } 
 #project ul li{
-	margin:10px 0.5% 0 0.5%;
+	margin:0 0.5% 25px 0.5%;
 }
 #project img{
 	width:280px;
